# CommunicationChannel

./: CMakeLists.txt  README.md  main.c
CRC_16-CCITT/: crc_16ccitt.c  crc_16ccitt.h
ClientSide/: main.c
CommuniationFunctions/: serial_communication_functions.c  serial_communication_functions.h
CommunicationFunctions/: serial_communication_functions.c  serial_communication_functions.h
CommunicationProtocol/: protocol_keywords.h
ControllerSide/: StartSerialCommunication.ino
ControllerSide/StartSerialCommunication/: StartSerialCommunication.ino
